--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "prettier": "3.5.3",
     "tailwindcss": "^4.1.4",
     "vite": "^6.2.4",
+    "vite-plugin-pwa": "^1.0.0",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
 }
