--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "@capacitor/core": "^7.2.0",
     "@iconify/vue": "^5.0.0",
     "@tailwindcss/vite": "^4.1.4",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "axios": "^1.8.4",
     "daisyui": "^5.0.22",
     "pinia": "^3.0.2",
